<resources>
    <string name="app_name">Nhà đất</string>
    <!--    database back4app-->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">jzuWNy8aKL8Ju1UtZPiAYsCU44Jx81j7wVDgDqao</string>
    <string name="back4app_client_key">xtbQNAjTMpJzgSMJ9uP906hr9kjRvQxXrScap8Hh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Trang chủ</string>
    <string name="post">Đăng tin</string>
    <string name="manager">Quản lý tin đăng</string>
    <string name="noti">Thông báo</string>
    <string name="mess">Tin nhắn</string>
    <string name="tittledashboard_nosignin">Bạn cần đăng nhập để thực hiện đăng tin</string>
    <string name="dashboard_buttonsignin">Đăng Nhập/Đăng ký</string>
    <string name="dashboard_danhmuc">Danh mục tin đăng</string>
    <string name="dashboard_tinh">Chọn tỉnh</string>
    <string name="dashboard_quanhuyen">Chọn quận, huyện</string>
    <string name="title_activity_dang_tin_mo_ta">DangTin_MoTa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>