<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_chat"
        android:title="@string/mess" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_add"
        android:title="@string/post" />

    <item
        android:id="@+id/navigation_notif"
        android:icon="@drawable/ic_notification"
        android:title="@string/noti" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_dashboard_layout"
        android:title="@string/manager" />

</menu>